# cc-rms-mqtt-monitor

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
cc_mqtt_monitor/: __init__.py  __main__.py  collect.py  config.py  diagnose.py  discovery.py  hadiscovery.py  health.py  maintenance.py  monitor.py  oslevel.py  publisher.py  rmsmode.py  sanitize.py  solar.py  viewer.py
deploy/: README.md  aclfile  hardening.conf  mosquitto.conf
docs/: bridge_contract.md
scripts/: autoupdate.sh  deploy_station.sh  install.sh  uninstall_station.sh
systemd/: cc-rms-monitor-update.service  cc-rms-monitor-update.timer  cc-rms-monitor.service
tests/: test_camera_unreachable.py  test_capture_events.py  test_capture_stall.py  test_classify.py  test_config_reload.py  test_journal_fatal.py  test_sanitize.py
