[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-rms-mqtt-monitor"
version = "0.1.0"
description = "Publish RMS meteor-station health to MQTT (plain JSON + Home Assistant discovery)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "ContrailCast"}]
keywords = ["rms", "meteor", "mqtt", "monitoring", "homeassistant"]
dependencies = [
    "paho-mqtt>=1.6",
    "pyyaml>=5.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cc-rms-monitor = "cc_mqtt_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cc_mqtt_monitor*"]
